# ThorsChalice

./: .gitignore  Makefile.config.in  Notes  config.h.in  configure  configure.ac
src/: Makefile
src/ThorsChalice/: ChaliceArgs.cpp  ChaliceArgs.h  ChaliceCLA.cpp  ChaliceCLA.h  ChaliceConfig.h  ChaliceServer.cpp  ChaliceServer.h  DLLib.cpp  HTTPResponse.h  HTTPSend.h  Makefile  ThorsChalice.cpp  ThorsChalice.h
src/ThorsChalice/test/: ChaliceArgsTest.cpp  ChaliceCLATest.cpp  ChaliceServerTest.cpp  DLLibTest.cpp
src/ThorsChalice/test/data/pages/: page1
src/ThorsSlack/: .gitignore
src/ThorsSlack/test/: Environment.h  SlackAPI_ChatTest.cpp
src/ThorsSlackBot/: Environment.cpp  Environment.h  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  HTTPSStream.cpp  HTTPSStream.h  Makefile  SlackAPI_Auth.h  SlackAPI_Chat.h  SlackBlockKit.h  SlackCLI.cpp  SlackClient.h  SlackEvent_Challenge.h  SlackEvent_Message.h  SlackStream.cpp  SlackStream.h  ThorsSlackBot.cpp  ThorsSlackBot.h  WelcomeMessage.cpp  WelcomeMessage.h
